# sl_desktop_demo_wx

./: .gitignore  .travis.yml  BlankDisplayService.cpp  BlankDisplayService.h  BlankWxWindowActivator.cpp  BlankWxWindowActivator.h  CMakeLists.txt  appveyor.yml  biicode.conf  suppress.vg
impl/: BlankApplication.cpp  BlankApplication.h  BlankWindow.cpp  BlankWindow.h  ScreenshotEvent.cpp  ScreenshotEvent.h
test/: CMakeLists.txt  main.cpp  slDesktopDemoWxTestConfig.h.in
